<resources>
    <string name="app_name">Friends Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="namePlaceholder">Your Name</string>
    <string name="phonePlaceholder">+910000000000</string>
    <string name="startTracking">Start Tracking</string>
    <string name="login">Login</string>
    <string name="phone_placeholder">Phone No</string>
    <string name="plus_sign">+</string>
    <string name="code_placeholder">61</string>
    <string name="default_country_code">61</string>
    <string name="error_phone_required">You need to enter phone number</string>
    <string name="error_name_required">You need to enter name</string>
    <string name="error_name_invalid">Enter a valid name</string>
    <string name="error_email_required">You need to enter email</string>
    <string name="error_email_invalid">Enter a valid email</string>
    <string name="error_birthday_required">You need to enter birthday</string>
    <string name="error_birthday_invalid">Enter a valid birthday</string>

    <string name="error_phone_not_valid">Enter a valid phone number</string>
    <string name="error_country_code_required">You need to enter country code</string>

    <string name="name_placeholder">Name</string>
    <string name="email_placeholder">Email</string>
    <string name="birthday_placeholder">Birthday</string>
    <string name="photo_button">Pick Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="create_account">Create Account</string>
    <string name="pick_image_intent_text">Choose Image</string>
    <string name="error_photo_required">Please choose a photo</string>
    <string name="error_create_account">Error while crreating account</string>

    <string name="welcomeText">Welcome</string>
</resources>
